changed font to roboto css

--- a/style.css
+++ b/style.css
@@ -14,8 +14,10 @@ body {
 
 h1 {
     color: Crimson;
+    font-family: Roboto, sans-serif;
 }
 
 p {
     color: Crimson;
+    font-family: Roboto, sans-serif;
 }
