--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,14 +1,107 @@
-/* || GENERAL STYLES*/
+html {
+    scroll-behavior: smooth;
+}
+
+/* || GENERAL STYLES */
 /* Handle basic element styling */
 body {
     font-family: 'Roboto', sans-serif;
-    padding: 25px;
+}
+
+/* || GRID LAYOUT 
+
+.wrapper {
+    display: grid;
+    grid-template-columns: 1fr 4fr 1fr;
+}
+
+nav {
+    grid-column-start: 1;
+    grid-column-end: 4;
+}
+
+header {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    text-align: center;
+}
+
+section {
+    height: 100vh;
+    grid-column-start: 2;
+    grid-column-end: 3;
+}
+
+footer {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    text-align: center;
+}
+*/
+
+/* || GRID LAYOUT */
+
+.main-header {
+    grid-area: header;
+}
+
+.content {
+    grid-area: content;
+}
+
+.main-navigation {
+    grid-area: navigation;
+}
+
+.side {
+    grid-area: sidebar;
+}
+
+.main-footer {
+    grid-area: footer;
+}
+
+.wrapper {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-areas:
+      "navigation"
+      "header"
+      "content"
+      "sidebar"
+      "footer";
+}
+
+@media (min-width: 500px) {
+    .wrapper {
+      grid-template-columns: 1fr 3fr;
+      grid-template-areas:
+        "navigation     navigation"
+        "header         header"
+        "sidebar        content"
+        "footer         footer";
+    }
+    nav ul {
+      display: flex;
+      justify-content: space-between;
+    }
+}
+
+  @media (min-width: 700px) {
+    .wrapper {
+      grid-template-columns: 1fr 4fr 1fr;
+      grid-template-areas:
+        "navigation navigation navigation"
+        "header     header     header"
+        "sidebar    content    content"
+        "footer     footer     footer"
+     }
+     nav ul {
+       flex-direction: column;
+     }
 }
 
 /* Handle specific elements nested in the DOM */
-h1, h2 {
-    color: #ee3e80;
-}
-p {
-    color: #665544;
+header, footer {
+    text-align: center;
 }
